--- a/.github/workflows/workflow_generate_model_output.yml
+++ b/.github/workflows/workflow_generate_model_output.yml
@@ -49,8 +49,11 @@ jobs:
       with:
         install-r: false
         use-public-rspm: true
-        
-    - name: Installing dependencies
+
+    - name: Install system dependencies
+      run: sudo apt-get update && sudo apt-get install -y libmagick++-dev
+      
+    - name: Installing R dependencies
       run: |
         install.packages("summarytools")
       shell: Rscript {0}
