--- a/.github/workflows/workflow_generate_model_output.yml
+++ b/.github/workflows/workflow_generate_model_output.yml
@@ -55,6 +55,7 @@ jobs:
       
     - name: Installing R dependencies
       run: |
+        install.packages("hubVis", repos = c("https://hubverse-org.r-universe.dev", "https://cloud.r-project.org"))
         install.packages("summarytools")
       shell: Rscript {0}
 
