--- a/.github/workflows/workflow_generate_model_output.yml
+++ b/.github/workflows/workflow_generate_model_output.yml
@@ -51,7 +51,7 @@ jobs:
         use-public-rspm: true
 
     - name: Install system dependencies
-      run: sudo apt-get update && sudo apt-get install -y libmagick++-dev
+      run: sudo apt-get update && sudo apt-get install -y libmagick++-dev && sudo apt-get install -y libcurl4-openssl-dev
       
     - name: Installing R dependencies
       run: |
