--- a/.github/workflows/workflow_generate_model_output.yml
+++ b/.github/workflows/workflow_generate_model_output.yml
@@ -68,8 +68,8 @@ jobs:
       run: |
         # call R script from tools
         # Rscript ./models/Forecasting-hubs_models/00_main.R  --hub_path "./repo"
-        cd ./models/Forecasting-hubs_models
-        Rscript 00_main.R
+        cd ./models
+        Rscript ./Forecasting-hubs_models/00_main.R
 
 
     # Finally, when you are done with your model processign, 
