--- a/.github/workflows/workflow_generate_model_output.yml
+++ b/.github/workflows/workflow_generate_model_output.yml
@@ -47,6 +47,7 @@ jobs:
     # ----------------------------------------------------------------
     - uses: r-lib/actions/setup-r@v2
       with:
+        r-version: "4.3.3"
         install-r: false
         use-public-rspm: true
 
