--- a/.github/workflows/workflow_generate_model_output.yml
+++ b/.github/workflows/workflow_generate_model_output.yml
@@ -86,7 +86,7 @@ jobs:
     - name: Commit data repo changes
       uses: EndBug/add-and-commit@v7
       with: 
-          cwd: './repo'
+          cwd: '.'
           message: "Update data storage"
           default_author: github_actions
           push: true
