--- a/.github/workflows/workflow_submit_model_forecasts.yml
+++ b/.github/workflows/workflow_submit_model_forecasts.yml
@@ -20,7 +20,7 @@
           repository: 'EU-ECDC/ECDC-Mathematical-Models'
           ref: 'main'
           path: './source-repo'
-          #token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MY_PAT_SECRET_RespiCast }}
 
         # Step 2: Checkout the destination repository (RespiCast-SyndromicIndicators)
       - name: Checkout destination repository
@@ -58,9 +58,7 @@
                   ./model-output/ECDC-SARIMA/2024-11-27-ECDC-SARIMA.csv
           git commit -m "Submitting forecasts of Syndromic_indicators - soca_simplex and SARIMA models"
           git push -u origin add-results-RespiCast-SyndromicIndicators
-          #git push -u https://x-access-token:${{ secrets.MY_PAT_SECRET_RespiCast }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git add-results-files
-          git push https://github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git HEAD:add-results-RespiCast-SyndromicIndicators
-
+          git push -u https://x-access-token:${{ secrets.MY_PAT_SECRET_RespiCast }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git add-results-files
         #env:
           #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
@@ -72,6 +70,6 @@
                        --base main \
                        --title "Submitting ECDC forecasts" \
                        --body "This PR adds the ECDC forecasts to RespiCast repo."
-        #env:
-          #GH_TOKEN: ${{ secrets.MY_PAT_SECRET_RespiCast }}
+        env:
+          GH_TOKEN: ${{ secrets.MY_PAT_SECRET_RespiCast }}
           
