--- a/.github/workflows/workflow_submit_model_forecasts.yml
+++ b/.github/workflows/workflow_submit_model_forecasts.yml
@@ -53,9 +53,8 @@
           git add ./model-output/ECDC-soca_simplex/2024-11-27-ECDC-soca_simplex.csv \
                   ./model-output/ECDC-SARIMA/2024-11-27-ECDC-SARIMA.csv
           git commit -m "Submitting forecasts of Syndromic_indicators - soca_simplex and SARIMA models"
-          #git push -u origin add-results-RespiCast-SyndromicIndicators
-          git push -u https://x-access-token:${{ secrets.SECRET_PUSH_ACCESS_RESPICAST }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git add-results-RespiCast-SyndromicIndicators
-        
+          git push https://x-access-token:${{ secrets.Secret_PUSH_ACCESS_RespiCast }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git HEAD:add-results-RespiCast-SyndromicIndicators
+
         # Step 6: Open a pull request
       - name: Create a pull request
         run: |
