--- a/.github/workflows/workflow_submit_model_forecasts.yml
+++ b/.github/workflows/workflow_submit_model_forecasts.yml
@@ -11,7 +11,10 @@
 
   jobs:
     create_PR_job:
+      permissions:
+        contents: write  # Allows pushing changes to the repository
       runs-on: ubuntu-latest
+        
       steps:
         # Step 1: Checkout the source repository (ECDC-Mathematical-Models)
       - name: Checkout source repository
