--- a/.github/workflows/workflow_submit_model_forecasts.yml
+++ b/.github/workflows/workflow_submit_model_forecasts.yml
@@ -13,6 +13,7 @@
     create_PR_job:
       permissions:
         contents: write  # Allows pushing changes to the repository
+        pages: write
       runs-on: ubuntu-latest
         
       steps:
