--- a/.github/workflows/workflow_submit_model_forecasts.yml
+++ b/.github/workflows/workflow_submit_model_forecasts.yml
@@ -39,6 +39,7 @@
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           cd ./destination-repo
+          git config --unset-all http.https://github.com/.extraheader
           git checkout -b add-results-RespiCast-SyndromicIndicators
 
         # Step 4: Copy the two model-output files to the destination repository
