--- a/.github/workflows/workflow_submit_model_forecasts.yml
+++ b/.github/workflows/workflow_submit_model_forecasts.yml
@@ -55,12 +55,14 @@
       - name: Commit changes
         run: |
           cd ./destination-repo
+          git fetch origin main  
+          git merge origin/main
           git add ./model-output/ECDC-soca_simplex/2024-12-04-ECDC-soca_simplex.csv \
                   ./model-output/ECDC-SARIMA/2024-12-04-ECDC-SARIMA.csv
           git commit -m "Submitting forecasts of Syndromic_indicators - soca_simplex and SARIMA models"
           # Pull the latest changes from the branch to avoid conflicts
-          git config pull.rebase false  # merge          
-          git pull https://x-access-token:${{ secrets.Secret_PUSH_ACCESS_RespiCast }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git add-results-RespiCast-SyndromicIndicators
+          #git config pull.rebase false  # merge          
+          #git pull https://x-access-token:${{ secrets.Secret_PUSH_ACCESS_RespiCast }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git add-results-RespiCast-SyndromicIndicators
           git push https://x-access-token:${{ secrets.Secret_PUSH_ACCESS_RespiCast }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git HEAD:add-results-RespiCast-SyndromicIndicators
           
         # Step 6: Open a pull request
