--- a/.github/workflows/workflow_submit_model_forecasts.yml
+++ b/.github/workflows/workflow_submit_model_forecasts.yml
@@ -55,8 +55,8 @@
       - name: Commit changes
         run: |
           cd ./destination-repo
-          git fetch origin main  
-          git merge origin/main
+          #git fetch origin main  
+          #git merge origin/main
           git add ./model-output/ECDC-soca_simplex/2024-12-04-ECDC-soca_simplex.csv \
                   ./model-output/ECDC-SARIMA/2024-12-04-ECDC-SARIMA.csv
           git commit -m "Submitting forecasts of Syndromic_indicators - soca_simplex and SARIMA models"
