--- a/.github/workflows/workflow_submit_model_forecasts.yml
+++ b/.github/workflows/workflow_submit_model_forecasts.yml
@@ -40,7 +40,7 @@
           git config --global user.name "github-actions[bot]"
           cd ./destination-repo
           git config --unset-all http.https://github.com/.extraheader
-          #git checkout -b add-results-RespiCast-SyndromicIndicators
+          git checkout -b add-results-RespiCast-SyndromicIndicators
 
         # Step 4: Copy the two model-output files to the destination repository
       - name: Copy model-output files
@@ -67,14 +67,14 @@
           git push https://x-access-token:${{ secrets.Secret_PUSH_ACCESS_RespiCast }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git main
           
         # Step 6: Open a pull request
-      #- name: Create a pull request
-        #run: |
-         # cd ./destination-repo
-          ##gh pr create --head github-actions[bot]:add-results-RespiCast-SyndromicIndicators \
-          #gh pr create --head add-results-RespiCast-SyndromicIndicators \
-            #           --base main \
-             #          --title "Submitting ECDC forecasts" \
-              #         --body "This PR adds the ECDC forecasts to RespiCast repo."
-        #env:
-         # GH_TOKEN: ${{ secrets.Secret_PUSH_ACCESS_RespiCast }}
+      - name: Create a pull request
+        run: |
+          cd ./destination-repo
+          #gh pr create --head github-actions[bot]:add-results-RespiCast-SyndromicIndicators \
+          gh pr create --head add-results-RespiCast-SyndromicIndicators \
+                       --base main \
+                       --title "Submitting ECDC forecasts" \
+                       --body "This PR adds the ECDC forecasts to RespiCast repo."
+        env:
+          GH_TOKEN: ${{ secrets.Secret_PUSH_ACCESS_RespiCast }}
           
