--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -38,7 +38,7 @@ jobs:
         to: "rok.grah@ecdc.europa.eu"  # Replace with the recipient's email address
         #from: ${{ secrets.GMAIL_EMAIL }}
         from: "ecdc.ga@gmail.com"
-        secure: true
+        secure: false
         attachments: |
           ./models/Forecasting-hubs_models/model_output/model_output/figures/2024-12-04-ECDC-soca_simplex_ILI.jpg
           ./models/Forecasting-hubs_models/model_output/model_output/figures/2024-12-04-ECDC-soca_simplex_ARI.jpg
