--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -19,10 +19,10 @@ jobs:
       uses: actions/checkout@v3
 
     # Step 2: Prepare the email content and attach files
-    - name: Send email via Outlook
+    - name: Send email via gmail
       uses: dawidd6/action-send-mail@v3
       with:
-        server_address: 'smtp.gmail.com'  # Outlook SMTP server
+        server_address: 'smtp.gmail.com'  # gmail SMTP server
         server_port: 587                      # Port for TLS
         username: ${{ secrets.GMAIL_EMAIL }}
         password: ${{ secrets.GMAIL_APP_PASSWORD }}
