--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -37,7 +37,7 @@ jobs:
           GitHub Actions
         to: "rok.grah@ecdc.europa.eu"  # Replace with the recipient's email address
         from: ${{ secrets.GMAIL_EMAIL }}
-        secure: false
+        #secure: false
         attachments: |
           ./models/Forecasting-hubs_models/model_output/model_output/figures/2024-12-04-ECDC-soca_simplex_ILI.jpg
           ./models/Forecasting-hubs_models/model_output/model_output/figures/2024-12-04-ECDC-soca_simplex_ARI.jpg
