--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -20,7 +20,7 @@ jobs:
 
     # Step 2: Prepare the email content and attach files
     - name: Send email via gmail
-      uses: dawidd6/action-send-mail@v3
+      uses: dawidd6/action-send-mail@v4
       with:
         server_address: 'smtp.gmail.com'  # gmail SMTP server
         server_port: 587                      # Port for TLS
@@ -37,7 +37,7 @@ jobs:
           GitHub Actions
         to: "rok.grah@ecdc.europa.eu"  # Replace with the recipient's email address
         from: ${{ secrets.GMAIL_EMAIL }}
-        #secure: false
+        secure: true
         attachments: |
           ./models/Forecasting-hubs_models/model_output/model_output/figures/2024-12-04-ECDC-soca_simplex_ILI.jpg
           ./models/Forecasting-hubs_models/model_output/model_output/figures/2024-12-04-ECDC-soca_simplex_ARI.jpg
