--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Send email via gmail
       uses: dawidd6/action-send-mail@v4
       with:
-        server_address: 'smtp.gmail.com'  # gmail SMTP server
+        server_address: smtp.gmail.com  # gmail SMTP server
         server_port: 587                      # Port for TLS
         username: ${{ secrets.GMAIL_EMAIL }}
         password: ${{ secrets.GMAIL_APP_PASSWORD }}
