--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -37,8 +37,8 @@ jobs:
           Regards,
           GitHub Actions
         to: rok.grah@ecdc.europa.eu  # Replace with the recipient's email address
-        from: ${{ secrets.GMAIL_EMAIL }}
-        #from: ecdc.ga@gmail.com
+        #from: ${{ secrets.GMAIL_EMAIL }}
+        from: ecdc.ga@gmail.com
         secure: true
         attachments: |
           ./models/Forecasting-hubs_models/model_output/model_output/figures/2024-12-04-ECDC-soca_simplex_ILI.jpg
