--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -23,8 +23,8 @@ jobs:
       uses: dawidd6/action-send-mail@v3
       with:
         server_address: smtp.gmail.com  # gmail SMTP server
-        #server_port: 587 # Port for TLS
-        server_port: 465 # Port for SSL
+        server_port: 587 # Port for TLS
+        #server_port: 465 # Port for SSL
         username: ${{ secrets.GMAIL_EMAIL }}
         password: ${{ secrets.GMAIL_APP_PASSWORD }}
         subject: "RespiCast Forecast Workflow Completed"
