--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -18,6 +18,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    # Step 1a: See which files are available
+    - name: List files for debugging
+      run: ls -R ./models/Forecasting-hubs_models/model_output/figures/
+      
     # Step 2: Prepare the email content and attach files
     - name: Send email via gmail
       uses: dawidd6/action-send-mail@v3
