--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -18,6 +18,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: List the root directory
+      run: ls -R .  # This will list all files in the repository to help debug the file location.
+
     # Step 1a: See which files are available
     - name: List files for debugging
       run: ls -R ./models/Forecasting-hubs_models/model_output/figures/      
