--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -38,7 +38,8 @@ jobs:
       with:
         server_address: smtp.gmail.com  # gmail SMTP server
         server_port: 587 # Port for TLS
-        username: ${{ secrets.GMAIL_EMAIL }}
+        #username: ${{ secrets.GMAIL_EMAIL }}
+        username: ecdc.ga@gmail.com
         password: ${{ secrets.GMAIL_APP_PASSWORD }}
         subject: RespiCast Forecast Workflow Completed
         body: Test test
