--- a/.github/workflows/workflow_submit_model_forecasts.yml
+++ b/.github/workflows/workflow_submit_model_forecasts.yml
@@ -84,7 +84,8 @@
                   ./model-output/ECDC-SARIMA/${wednesday_date}-ECDC-SARIMA.csv
           git status  # Verify if the files were staged
           git commit -m "Submitting forecasts of Syndromic_indicators - soca_simplex and SARIMA models"
-          git push https://x-access-token:${{ secrets.Secret_PUSH_ACCESS_RespiCast }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git main
+          #git push https://x-access-token:${{ secrets.Secret_PUSH_ACCESS_RespiCast }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git main
+          git push https://x-access-token:${{ secrets.Secret_PUSH_ACCESS_RespiCast }}@github.com/european-modelling-hubs/RespiCast-SyndromicIndicators.git add-results-RespiCast-SyndromicIndicators
           
         # Step 7: Open a pull request
       - name: Create a pull request
