--- a/.github/workflows/workflow_generate_model_output.yml
+++ b/.github/workflows/workflow_generate_model_output.yml
@@ -48,7 +48,7 @@ jobs:
     - uses: r-lib/actions/setup-r@v2
       with:
         r-version: "4.3.3"
-        install-r: false
+        #install-r: false
         use-public-rspm: true
 
     - name: Install system dependencies
