--- a/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
+++ b/.github/workflows/Email_Notification_on_Completed_Forecasts.yml
@@ -3,8 +3,8 @@ name: Send_Automated_Email
 on:
   workflow_run:
     #workflows: ["Generate_RespiCast_Forecasts"]  # Trigger when this workflow finishes
-    types:
-      - completed
+    #types:
+    #  - completed
   
   # Or you can manually trigger the workflow
   workflow_dispatch:
